# podcastfy

./: .dockerignore  .env.template  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.dev  Dockerfile_api  Error while Installing Solution  GUIDELINES.md  LICENSE.md  Makefile  NOTICE  PRIVACY_POLICY.md  README.md  README_gemininew.md  TESTIMONIALS.md  build_docs.py  config.yaml  courses.html  dashboard.html  dev-requirements.txt  docker-compose.yml  edge-test.py  index.html  landing.html  make.sh  must_do_before_merge.txt  procfile  pyproject.toml  requirements.txt  requirements_backup.txt  template_output.md  test-get-template.py  test-podcastfy.py
.github/: FUNDING.yml
.github/workflows/: docker-build.yml  docker-publish.yml  draft-pdf.yml  python-app.yml  python-package.yml
css/: style.css
data/prompts/: prompt.txt  (+1 more)
docs/: generate_api_docs.py  requirements.txt
js/: auth.js
paper/: paper.bib  paper.md  podcastfy.drawio  related-work.md
podcastfy/: __init__.py  character.py  client.py  client_v2.py  config.yaml  content_generator.py  conversation_config.yaml  main.py  prompts.py  text_to_speech.py  tts_backends.py
podcastify/: main.py
tests/: __init__.py  test_api.py  test_audio.py  test_client.py  test_content_parser.py  test_core_api.py  test_genai_podcast.py  test_generate_podcast.py  test_markdown_extractor.py  test_transcript.py  test_user_bookmarks.py
usage/: api.md  cli.md  config.md  config_custom.md  conversation_custom.md  docker.md  fast_api.md  fast_api_example.py  how-to  how-to.md  license-guide.md  local_llm.md  podcastfy.ipynb
(+165 files in other folders)
